<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="empty" />
    <string name="app_name">FishTrack</string>
    <string name="app_name_tomato">TomatoTrack</string>
    <string name="app_name_hotel">LinenTrack</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="label_copyright_splash">Copyright AgriTrack v1.0.0</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="label_login">Login</string>
    <string name="label_submit">Submit</string>
    <string name="label_password_hint">PIN</string>
    <string name="label_current_site">Current location:</string>
    <string name="pick_current_site">Pick Current Site</string>
    <string name="label_login_header_content">Please login with your credentials</string>
    <string name="label_tv_forgot_pwd">Did you forget your PIN?</string>
    <string name="empty_credentials_alert">Please fill-in PIN.</string>
    <string name="empty_username_alert">Please fill-in Username.</string>
    <string name="label_version_fish_track_profile">FishTrack v1.0.0</string>
    <string name="main_menu_title_fishing">Fishing</string>
    <string name="item_home_adapter_menu_item">Menu item</string>
    <string name="menu_title_fishing">Fishing</string>
    <string name="menu_title_test_temp">Test temperature</string>
    <string name="menu_title_transport">Transport</string>
    <string name="menu_title_fish_receiving">Receipt</string>
    <string name="menu_title_fish_packaging">Quality</string>
    <string name="menu_title_bin_overturn">Bin overturn</string>
    <string name="menu_title_warehouse">Warehouse</string>
    <string name="menu_title_maintenance">Maintenance</string>
    <string name="menu_title_sea_temp">Sea Temperature</string>
    <string name="menu_title_incoming">Incoming</string>
    <string name="menu_title_outgoing">Outgoing</string>
    <string name="menu_title_inventory">Inventory</string>
    <string name="menu_title_correlation">Correlation</string>
    <string name="menu_title_replace_tags">Replace tags</string>
    <string name="menu_title_new_tags">New tags</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_internal">Internal track</string>
    <string name="menu_title_external">External</string>
    <string name="menu_title_cage">Cage</string>
    <string name="menu_title_net">Net</string>
    <string name="menu_title_cage_net">Cage-Net</string>
    <string name="menu_title_bin">Bin</string>
    <string name="menu_title_platform">Platform</string>
    <string name="title_config">Configure app</string>
    <string name="title_Tools">IOT Logger</string>
    <string name="title_user_date">USER NAME / DATE</string>
    <string name="title_fishing">FISHING</string>
    <string name="confirm_pin_for_split_request">Please insert your PIN to confirm split of fishing request!</string>
    <string name="responsible">Responsible</string>
    <string name="pin">PIN</string>
    <string name="split_add_supervisor_and_confirm">Are you sure to proceed with split?</string>
    <string name="out_of_system_fishing_add_supervisor_and_confirm">Are you sure to proceed with out of system fishing?</string>
    <string name="fill_all_fields">Please fill all fields!</string>
    <string name="select_reason_out_of_system">Select reason for out of system fishing</string>
    <string name="select_reason_of_weight_deviation">Fished weight differs from requested weight by \%1$s\ kg. Please select reason for this deviation!</string>
    <string name="weight_deviation">You caught \%1$s\ kg more than the requested quantity.</string>
    <string name="inability_to_fish">Inability to fish</string>
    <string name="empty_cage">Cage was emptied</string>
    <string name="fed_fish">Fed fish</string>
    <string name="lack_of_sufficient_biomass">Lack of sufficient biomass</string>
    <string name="bad_weather">Bad weather</string>
    <string name="out_of_network">Out of network</string>
    <string name="you_are_online">You have logged in with network coverage. Please select harvest request!</string>
    <string name="start_fishing">Start Fishing</string>
    <string name="choose_harvest">Harvest initiator</string>
    <string name="harvest_initiator">Harvest initiator</string>
    <string name="harvest_details">Harvest details</string>
    <string name="delete_fishing_tx">Do you want to cancel this fishing transaction?</string>
    <string name="fish_type">Fish Type</string>
    <string name="cage">Cage</string>
    <string name="average_weight">Average weight</string>
    <string name="fish_size">Fish Size</string>
    <string name="notes">Notes</string>
    <string name="requested_quantity">Requested Quantity</string>
    <string name="packaging_plant">Packaging Plant</string>
    <string name="scan_platform">Scan Platform</string>
    <string name="barcode_platform">Barcode of Platform</string>
    <string name="title_user_date_platform">USER NAME / DATE / PLATFORM</string>
    <string name="select_bins">Select bins</string>
    <string name="bins_to_use">Bins for usage</string>
    <string name="scan_bin">Scan Bin</string>
    <string name="delete_bin">Delete Bin</string>
    <string name="number_of_bins"># of bins:</string>
    <string name="number_of_expected_bins"># of expected bins:</string>
    <string name="number_of_checked_bins"># of checked bins:</string>
    <string name="select_fishing_team">Select fishing team</string>
    <string name="fishing_team">Fishing team</string>
    <string name="add_employee">Add employee</string>
    <string name="delete_employee">Del employee</string>
    <string name="pick_fishing_team">Pick team members</string>
    <string name="number_of_employees"># of employees:</string>
    <string name="title_platform_quantity_no_bins">PLATFORM / REQUESTED QUANTITY / # BINS</string>
    <string name="scan_cage_nets">Please scan cage and net</string>
    <string name="name_cage">Name Cage</string>
    <string name="platform">Platform</string>
    <string name="scan_cage">Scan Cage</string>
    <string name="confirm_cage">"Please type in \%1$s\!"</string>
    <string name="wrong_typing_cage">"Wrong typing! \nPlease type in \%1$s\!"</string>
    <string name="proceed_without_cage">"Wrong cage \(%1$s\)! Do you want to proceed with this one?"</string>
    <string name="name_net">Name Net</string>
    <string name="scan_net">Scan Net</string>
    <string name="title_cage_quantity_no_bins">CAGE / REQUESTED QUANTITY / # BINS</string>
    <string name="choose_sea_temp">Choose sea temp</string>
    <string name="ichthyopathologist">Ichthyopathologist</string>
    <string name="ichthyopathologist_name">Nikos Papagiannakis</string>
    <string name="last_fed">Date of last nutrition</string>
    <string name="last_fed_date">21/7/2021</string>
    <string name="type_of_fish">Pestrofa</string>
    <string name="ice_adequacy">Ice adequacy</string>
    <string name="choose_ice_supplier">Ice supplier</string>
    <string name="fasting_days_notification">"Average sea temperature is \<b>%1$s°C</b>\! \n Minimum fasting days must be \<b>%2$s</b>\!"</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="back_button">BACK</string>
    <string name="add_catch_button">ADD CATCH</string>
    <string name="delete_catch_button">DELETE CATCH</string>
    <string name="end_bin_button">BIN FILLED</string>
    <string name="weight_bin">Weight</string>
    <string name="type_weight">Please type weight</string>
    <string name="fish_catch_weight">Fish Catch Weight</string>
    <string name="bt_scale_reading">Scale reading</string>
    <string name="bt_scale_status">BT scale status</string>
    <string name="fishing_catches">Fishing Catches</string>
    <string name="fishing_summary">Fishing Summary</string>
    <string name="fill_bin">Please press BIN FILLED</string>
    <string name="total_weight">TOTAL WEIGHT (Kg):</string>
    <string name="used_bins">USED BINS:</string>
    <string name="available_bins">AVAILABLE BINS:</string>
    <string name="total_quantity">Total quantity (Kg):</string>
    <string name="confirm_requested_quantity">Req quantity (Kg):</string>
    <string name="confirm_name_cage">Cage:</string>
    <string name="confirm_fish_type">Fish Type:</string>
    <string name="fishing_confirm">Confirm details</string>
    <string name="fishing_enter_pin">Enter PIN</string>
    <string name="title_test_temp">TEST TEMPERATURE</string>
    <string name="current_temp">Bin temperature is</string>
    <string name="title_transport">TRANSPORT</string>
    <string name="title_packaging_site_company_license_plate">PACKAGING SITE / COMPANY / LICENSE PLATE</string>
    <string name="choose_packaging_site">Choose packaging site</string>
    <string name="packaging_details">Packaging details</string>
    <string name="scan_one_bin">Scan bin</string>
    <string name="scan_all_bins">Scan all bins</string>
    <string name="driver_name">Type driver name</string>
    <string name="driver_phone">Type driver phone</string>
    <string name="license_plate">Type license plate</string>
    <string name="choose_company">Choose company</string>
    <string name="truck_refrigerated">Refrigerated truck</string>
    <string name="parallel_transport">Parallel transport</string>
    <string name="security_clip_label">Security clip number</string>
    <string name="bins_for_transport">Bins for transport</string>
    <string name="enter_security_clip_number">Enter security clip number</string>
    <string name="packaging_site">Packaging site:</string>
    <string name="company">Company:</string>
    <string name="driver_name_label">Driver name:</string>
    <string name="license_plate_label">License plate:</string>
    <string name="security_clip_label_confirm">Security clip:</string>
    <string name="sign_driver">Sign in box</string>
    <string name="phone_number">Phone number</string>
    <string name="username">Username</string>
    <string name="insert_user_details">Please insert your username and your phone number to be reminded of your PIN</string>
    <string name="forgot_your_pin_success">Your PIN was successfully sent to your phone number. Please use the button below to login to the application.</string>
    <string name="forgot_your_pin_failure">There was an issue with sending the SMS or with the information you provided. Please use the button below to try again.</string>
    <string name="login_failed">Login failed</string>
    <string name="change_position_to_find_network_coverage">Please find network coverage</string>
    <string name="proceed_without_network">You are out of network coverage. Do you want to proceed?</string>
    <string name="logo">Logo</string>
    <string name="title_receipt">RECEIPT</string>
    <string name="title_date_lot_dispatch_note">DATE / LOT / DISPATCH NOTE</string>
    <string name="processing_details">Receipt details</string>
    <string name="no_epc_list_returned">No list of bins returned for this bin</string>
    <string name="change_position_to_find_network_coverage_and_scan_again">Please find network coverage and scan bin again</string>
    <string name="receipt_header">#\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0 Bin \u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0 Cage \u00A0\u00A0\u00A0\u00A0\u00A0\u00A0 Kg</string>
    <string name="sync_asset_choise">Please select assets to sync</string>
    <string name="sync">Synchronize</string>
    <string name="sync_asset_message_1">Asset sync will take up to 2 minutes.</string>
    <string name="ok">OK</string>
    <string name="qr_code">qr_code</string>
    <string name="scan_qr_code">Please scan QR</string>
    <string name="fish_temp">T fish °C:</string>
    <string name="water_temp">T water °C:</string>
    <string name="fish_temp_2">T2 fish °C:</string>
</resources>