<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/agri_green"
    tools:context=".ui.activity.fishing.FishingDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/bg_form_screen"
        android:backgroundTint="@color/agri_blue"
        android:backgroundTintMode="multiply"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fadingEdge="horizontal"
        android:paddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="14dp"
            android:contentDescription="back Image"
            android:src="@drawable/ic_back"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvTitleToolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleToolbar"
            fontPath="fonts/open_sans_semibold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:width="250sp"
            android:gravity="center|top|fill_vertical"
            android:text="@string/title_fishing"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivNext"
            app:layout_constraintStart_toEndOf="@+id/ivBack"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingPrefix" />


        <ImageView
            android:id="@+id/ivNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="14dp"
            android:src="@drawable/ic_next"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTitleToolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPlatformQuantityNoBins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/agri_blue"
            android:backgroundTintMode="screen"
            android:gravity="center"
            android:text="@string/title_cage_quantity_no_bins"
            android:textColor="@color/agri_green"
            android:textSize="@dimen/subtitle_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleToolbar"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/footerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout">

        <Spinner
            android:id="@+id/spIceSupplier"
            style="@style/spinner_style"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:dropDownWidth="match_parent"
            android:focusableInTouchMode="true"
            android:requiresFadingEdge="horizontal"
            android:spinnerMode="dropdown"
            android:textAlignment="textStart"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIceSupplier"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <TextView
            android:id="@+id/tvFishType2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fish_type"
            android:textSize="@dimen/text_view_font_size"
            app:layout_constraintBottom_toTopOf="@+id/tvTypeOfFish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateOfLastNutrition" />

        <TextView
            android:id="@+id/tvChooseSeaTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/choose_sea_temp"
            android:textSize="@dimen/text_view_font_size"
            app:layout_constraintBottom_toTopOf="@+id/spSeaTemp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spSeaTemp"
            style="@style/spinner_style"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:dropDownWidth="match_parent"
            android:focusableInTouchMode="true"
            android:requiresFadingEdge="horizontal"
            android:spinnerMode="dropdown"
            android:textAlignment="textStart"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/tvIchthyopathologist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvChooseSeaTemp"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <TextView
            android:id="@+id/tvIchthyopathologist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/ichthyopathologist"
            android:textSize="@dimen/text_view_font_size"
            app:layout_constraintBottom_toTopOf="@+id/tvNameOfIchthyopathologist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spSeaTemp" />

        <TextView
            android:id="@+id/tvNameOfIchthyopathologist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:text="@string/ichthyopathologist_name"
            android:textSize="@dimen/text_view_font_size"
            app:layout_constraintBottom_toTopOf="@+id/tvLastNutrition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIchthyopathologist" />

        <TextView
            android:id="@+id/tvLastNutrition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/last_fed"
            android:textSize="@dimen/text_view_font_size"
            app:layout_constraintBottom_toTopOf="@+id/tvDateOfLastNutrition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameOfIchthyopathologist" />

        <TextView
            android:id="@+id/tvDateOfLastNutrition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:text="@string/last_fed_date"
            android:textSize="@dimen/text_view_font_size"
            app:layout_constraintBottom_toTopOf="@+id/tvFishType2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLastNutrition" />

        <TextView
            android:id="@+id/tvTypeOfFish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:text="@string/type_of_fish"
            android:textSize="@dimen/text_view_font_size"
            app:layout_constraintBottom_toTopOf="@+id/switchIce"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFishType2" />

        <Switch
            android:id="@+id/switchIce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleX="1"
            android:scaleY="1.3"
            android:showText="true"
            android:text="@string/ice_adequacy"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:textScaleX="1"
            android:textSize="@dimen/text_view_font_size"
            app:layout_constraintBottom_toTopOf="@+id/tvIceSupplier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTypeOfFish" />

        <TextView
            android:id="@+id/tvIceSupplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/choose_ice_supplier"
            android:textSize="@dimen/text_view_font_size"
            app:layout_constraintBottom_toTopOf="@+id/spIceSupplier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchIce" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footerLayout"
        android:layout_width="0dp"
        android:layout_height="68sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formLayout">

        <ImageView
            android:id="@+id/ivBackToFillBins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_shortcut_arrow_back" />

        <ImageView
            android:id="@+id/ivToCongs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_shortcut_arrow_forward" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>