<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_margin="2dp"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/lbFishT"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center|left"
        android:text="@string/fish_temp"
        android:textAlignment="gravity"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvFishT"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center|right"
        android:textAlignment="gravity"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lbFishT"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbWaterT"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:gravity="center|left"
        android:text="@string/water_temp"
        android:textAlignment="gravity"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbFishT" />

    <EditText
        android:id="@+id/tvWaterT"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:gravity="center|right"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lbWaterT"
        app:layout_constraintTop_toBottomOf="@id/tvFishT" />

    <TextView
        android:id="@+id/lbFishT2"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:gravity="center|left"
        android:text="@string/fish_temp_2"
        android:textAlignment="gravity"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbWaterT" />

    <EditText
        android:id="@+id/tvFishT2"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:gravity="center|right"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lbFishT2"
        app:layout_constraintTop_toBottomOf="@id/tvWaterT" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_press_effect"
        android:textColor="@color/yellow"
        android:text="OK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>